--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
 			<name>Ignacio0407</name>
 			<email>igngutser@alum.us.es</email>
 		</developer>
+		<developer>
+			<name>Miguel García Vizcaíno</name>
+			<email>miggarviz@alum.us.es</email>
+		</developer>
 	</developers>
 
 	<dependencies>
