--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 			</properties>
 		</developer>
         <developer>
-			<name>Antonio José López Cubiles</name>
+			<name>Antonio Jose Lopez Cubiles</name>
 			<email>antlopcub@alum.us.es</email>
 			<url>https://github.com/antlopcub</url>
 			<properties>
