--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.thymeleaf.mode=HTML
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 
-# JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+# JPA Cambiar primera linea
+spring.jpa.hibernate.ddl-auto=create-drop 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
