--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -27,6 +28,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.11.0",
     "reactstrap": "^9.1.6",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "swagger-ui-react": "^4.18.3",
     "web-vitals": "^3.1.1"
   },
