--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
         <npm.version>8.19.2</npm.version>
         <frontend-src-dir>${project.basedir}/frontend</frontend-src-dir>
 
+        <!-- ngrok configuration -->
+        <ngrok.enabled>true</ngrok.enabled>
+        <ngrok.authToken>2raCOjKpzccWhsxJaKBjT77vzzH_65CninXtKJNs9VKNyS7wU</ngrok.authToken>
+
     </properties>
 
 	<developers>
@@ -205,6 +209,12 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
             <version>3.9.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.kilmajster</groupId>
+            <artifactId>ngrok-spring-boot-starter</artifactId>
+            <version>0.9.2</version>
         </dependency>
 		
     </dependencies>
