--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,7 @@ api.server.url=I don't know
 api.description=The API is used to ...
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
+
+# Ngrok Configuration
+ngrok.enabled=true
+ngrok.authToken=tu_token_aqui
