Avanzando Chat y hechos algunos tests de componentes React

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,8 @@ springdoc.swagger-ui.tagsSorter=alpha
 # Ngrok Configuration
 ngrok.enabled=true
 ngrok.authToken=tu_token_aqui
+
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.com.tu.paquete=DEBUG
+logging.file.name=logs/app.log
