--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,7 +52,8 @@ springdoc.swagger-ui.tagsSorter=alpha
 
 # Ngrok Configuration
 ngrok.enabled=true
-ngrok.authToken=tu_token_aqui
+ngrok.authToken=2rfuENLr97X34rWWnTQCyo5suVf_337kdYPYmLmhrxYPZCVyN
+ngrok.command=http 8080 --host-header="localhost:8080"
 
 logging.level.root=INFO
 logging.level.org.springframework=INFO
