--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
 
 # Ngrok Configuration
-ngrok.enabled=true
+ngrok.enabled=false
 ngrok.authToken=2rfuENLr97X34rWWnTQCyo5suVf_337kdYPYmLmhrxYPZCVyN
 ngrok.command=http 8080 --host-header="localhost:8080"
 
