--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/reactstrap": "^8.7.1",
     "bootstrap": "^5.2.3",
     "dp1-game-template": "file:",
     "filepond": "^4.30.4",
